[tool.poetry]
name = "blockset"
version = "0.1.0"
description = "Open source Data Warehouse"
authors = ["Mohammed Tausif"]
license = "MIT"
readme = "README.md"
package-mode = false


[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
